; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_increment.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_increment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_increment(i32* %0, i64 %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i64 0, i64* %12, align 8
  %14 = load i64, i64* %10, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %50

17:                                               ; preds = %5
  %18 = load i32*, i32** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @zap_lookup(i32* %18, i64 %19, i8* %20, i32 8, i32 1, i64* %12)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %17
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* @ENOENT, align 4
  %27 = icmp ne i32 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = load i32, i32* %13, align 4
  store i32 %29, i32* %6, align 4
  br label %50

30:                                               ; preds = %24, %17
  %31 = load i64, i64* %10, align 8
  %32 = load i64, i64* %12, align 8
  %33 = add nsw i64 %32, %31
  store i64 %33, i64* %12, align 8
  %34 = load i64, i64* %12, align 8
  %35 = icmp eq i64 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %30
  %37 = load i32*, i32** %7, align 8
  %38 = load i64, i64* %8, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = call i32 @zap_remove(i32* %37, i64 %38, i8* %39, i32* %40)
  store i32 %41, i32* %13, align 4
  br label %48

42:                                               ; preds = %30
  %43 = load i32*, i32** %7, align 8
  %44 = load i64, i64* %8, align 8
  %45 = load i8*, i8** %9, align 8
  %46 = load i32*, i32** %11, align 8
  %47 = call i32 @zap_update(i32* %43, i64 %44, i8* %45, i32 8, i32 1, i64* %12, i32* %46)
  store i32 %47, i32* %13, align 4
  br label %48

48:                                               ; preds = %42, %36
  %49 = load i32, i32* %13, align 4
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %48, %28, %16
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i32 @zap_lookup(i32*, i64, i8*, i32, i32, i64*) #1

declare dso_local i32 @zap_remove(i32*, i64, i8*, i32*) #1

declare dso_local i32 @zap_update(i32*, i64, i8*, i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
